name:                fsml
version:             0.1.0.0
synopsis:            FSML using Template Haskell
description:         Please see README.md
homepage:            https://github.com/githubuser/fsml#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Schauß
maintainer:          sschauss@uni-koblenz.de
copyright:           Ralf Lämmel, Simon Schauß
category:            metaprogramming
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.FSML.QuasiQuoter
  other-modules:       Language.FSML.Ast
                       Language.FSML.Lexer
                       Language.FSML.Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3 && < 4
                     , template-haskell >=2 && <3
  default-language:    Haskell2010

executable fsml-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fsml
  default-language:    Haskell2010

test-suite fsml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fsml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fsml
