name:                fsml
version:             0.1.0.0
author:              Simon Schauß
maintainer:          sschauss@uni-koblenz.de
build-type:          Simple
cabal-version:       >=1.10

executable fsml
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    base >=4.0 && <5.0,
    fsml >=0.0 && <1.0
  hs-source-dirs: executable

library
  build-depends:
    base             >=4.0 && <5.0,
    parsec           >=3.0 && <4.0,
    template-haskell >=2.0 && <3.0
  default-language: Haskell2010
  exposed-modules:
    Language.Fsml
    Language.Fsml.AST
    Language.Fsml.Check
    Language.Fsml.CS
    Language.Fsml.Parser
    Language.Fsml.Quoter
    Language.Fsml.Runtime
  hs-source-dirs: library
  ghc-options:
    -Wall
  other-extensions:
    TemplateHaskell,
    QuasiQuotes

test-suite doctest
    build-depends:
      base    >=4.0 && <5.0,
      fsml    >=0.0 && <1.0,
      doctest >=0.0 && <1.0
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          Test.hs
    type:             exitcode-stdio-1.0

